--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "AzureSphereDevX"]
-	path = AzureSphereDevX
+[submodule "src\\CO2_Monitor\\AzureSphereDevX"]
+	path = src\\CO2_Monitor\\AzureSphereDevX
 	url = https://github.com/microsoft/Azure-Sphere-DevX.git
