--- a/src/CO2_Monitor/app_manifest.json
+++ b/src/CO2_Monitor/app_manifest.json
@@ -3,7 +3,7 @@
   "Name": "AzureSphereIoTCentral",
   "ComponentId": "25025d2c-66da-4448-bae1-ac26fcdd3627",
   "EntryPoint": "/bin/app",
-  "CmdArgs": [ "--ConnectionType", "DPS", "--ScopeID", "0ne000F25AF" ],
+  "CmdArgs": [ "--ScopeID", "REPLACE_WITH_YOUR_ID_SCOPE" ],
   "Capabilities": {
     "Gpio": [
       "$CONNECTED_LED",
@@ -17,12 +17,11 @@
     ],
     "AllowedConnections": [
       "global.azure-devices-provisioning.net",
-      "iot-hub-dps-azure-sphere.azure-devices-provisioning.net",
-      "iot-hub-azure-sphere.azure-devices.net",
+      "REPLACE_WITH_YOUR_IOT_HUB_ENDPOINT_URL",
       "api.timezonedb.com",
       "get.geojs.io"
     ],
-    "DeviceAuthentication": "9d7e79eb-e021-43ce-9f2b-fa944b447494"
+    "DeviceAuthentication": "REPLACE_WITH_YOUR_AZURE_SPHERE_TENANT_ID"
   },
   "ApplicationType": "Default"
 }
